--- a/overlays/uzip/furybsd-wifi-tool/files/usr/local/share/applications/fury-config-wifi.desktop
+++ b/overlays/uzip/furybsd-wifi-tool/files/usr/local/share/applications/fury-config-wifi.desktop
@@ -5,8 +5,8 @@ Version=1.0
 Terminal=false
 Type=Application
 Categories=
-Exec=sudo /usr/local/bin/furybsd-wifi-tool
+Exec=sudo -E /usr/local/bin/furybsd-wifi-tool
 TryExec=/usr/local/bin/furybsd-wifi-tool
-Name=Configure Wifi
-Comment=Configure Wifi
+Name=Wireless Networks
+Comment=Configure WLAN
 Icon=network-wireless
