Set psm options [ci skip]

--- a/overlays/boot/boot/loader.conf
+++ b/overlays/boot/boot/loader.conf
@@ -52,8 +52,11 @@ vfs.zfs.arc_max="40M"
 vfs.zfs.vdev.cache.size="5M"
 
 # Enable tapping on touchpads
+# https://www.freebsd.org/cgi/man.cgi?psm(4)
 hw.psm.elantech_support="1"
+hw.psm.trackpoint_support="1"
 hw.psm.synaptics_support="1"
+hw.psm.tap_enabled="1"
 
 # Boot splash
 boot_mute="YES"
