Set slight transparency for dropdown menus

--- a/overlays/uzip/hello/files/usr/local/etc/xdg/picom.conf
+++ b/overlays/uzip/hello/files/usr/local/etc/xdg/picom.conf
@@ -20,9 +20,9 @@ frame-opacity = 1.0;
 # inactive-dim = 0.15;
 blur-kern = "3x3box";
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
-fading = false;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fading = true;
+fade-in-step = 0.01;
+fade-out-step = 0.01;
 fade-exclude = [ ];
 backend = "xrender";
 mark-wmwin-focused = true;
@@ -47,8 +47,11 @@ wintypes :
     opacity = 0.75;
     focus = true;
   };
-  xxxdock = { shadow = false; }
+  dropdown_menu = { opacity = 0.9; }
+  popup_menu = { corner-radius = 0; opacity = 0.9; }
   dnd = { shadow = false; }
+  desktop = { fade = true; }
 };
 blur-background = false;
 no-fading-openclose = true;
+unredir-if-possible = false;
