No fading for menus [ci skip]

--- a/overlays/uzip/hello/files/usr/local/etc/xdg/picom.conf
+++ b/overlays/uzip/hello/files/usr/local/etc/xdg/picom.conf
@@ -47,8 +47,8 @@ wintypes :
     opacity = 0.75;
     focus = true;
   };
-  dropdown_menu = { opacity = 0.9; }
-  popup_menu = { corner-radius = 0; opacity = 0.9; }
+  dropdown_menu = { opacity = 0.9; fade = false; }
+  popup_menu = { corner-radius = 0; opacity = 0.9; fade = false; }
   dnd = { shadow = false; }
   desktop = { fade = true; }
 };
