Remove ugly fonts; see #91 [ci skip]

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/qterminal.org/qterminal.ini
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/qterminal.org/qterminal.ini
@@ -36,7 +36,7 @@ UseFontBoxDrawingChars=false
 colorScheme=BlackOnWhite
 emulation=default
 enabledBidiSupport=true
-fontFamily=Liberation Mono
+fontFamily=Source Code Pro Medium
 fontSize=11
 guiStyle=
 highlightCurrentTerminal=false
