Enable sleep on lid close [ci skip]

--- a/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
+++ b/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
@@ -21,3 +21,6 @@ vfs.usermount=1
 # Automatically switch audio devices (e.g., from HDMI to USB sound device when plugged in)
 # https://www.reddit.com/r/freebsd/comments/454j5p/
 sysctl hw.snd.default_auto=2
+
+# Enable sleep on lid close
+sysctl hw.acpi.lid_switch_state="S3"
