Use 'launch' command [ci skip]

--- a/overlays/uzip/hello/files/usr/local/share/applications/lector.desktop
+++ b/overlays/uzip/hello/files/usr/local/share/applications/lector.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Lector
-Exec=open Lector %F
+Exec=launch Lector %F
 Categories=Other;
 MimeType=application/epub+zip
 Terminal=false
