To display the correct icons in Dock, users must be able to see information on root processes [ci skip]

--- a/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
+++ b/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
@@ -6,8 +6,8 @@
 
 # Uncomment this to prevent users from seeing information about processes that
 # are being run under another UID.
-#security.bsd.see_other_uids=0
-security.bsd.see_other_uids=0
+# security.bsd.see_other_uids=0
+# Note: to display the correct icons in Dock for processes running as root, users must be able to see information on root processes
 security.bsd.see_other_gids=0
 security.bsd.see_jail_proc=0
 security.bsd.unprivileged_read_msgbuf=0
