Do not randomize PIDs [ci skip]
Makes it easier to find the last started processes toward the end at `ps ax`

--- a/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
+++ b/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
@@ -12,7 +12,7 @@ security.bsd.see_other_gids=0
 security.bsd.see_jail_proc=0
 security.bsd.unprivileged_read_msgbuf=0
 security.bsd.unprivileged_proc_debug=0
-kern.randompid=1
+# kern.randompid=1
 kern.evdev.rcpt_mask=6
 
 # Allow non-root users to mount
