--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/cyberos/dock_pinned.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/cyberos/dock_pinned.conf
@@ -1,34 +1,41 @@
+[Home]
+DesktopPath=
+Exec=Filer ~
+IconName=user-home
+Index=0
+visibleName=Home
+
 [Falkon]
 DesktopPath=
 Exec=falkon
 IconName=applications-internet
-Index=0
+Index=1
 visibleName=Browser
 
 [FeatherPad]
 DesktopPath=
 Exec=featherpad
 IconName=featherpad
-Index=1
+Index=2
 visibleName=FeatherPad
 
 [qterminal]
 DesktopPath=
 Exec=qterminal
 IconName=Terminal
-Index=2
+Index=3
 visibleName=Terminal
 
 [Utilities]
 DesktopPath=
-Exec=launch Filer.AppDir /Applications/Utilities
+Exec=Filer /Applications/Utilities
 IconName=applications-accessories
-Index=3
+Index=4
 visibleName=Utilities
 
 [Preferences]
 DesktopPath=
-Exec=launch Filer.AppDir /Applications/Preferences
+Exec=Filer /Applications/Preferences
 IconName=preferences-desktop
-Index=4
+Index=5
 visibleName=Preferences
