Ctrl+Alt+H shortcut to open $HOME in Filer [ci skip]
https://github.com/helloSystem/hello/issues/103#issuecomment-766189799

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/lxqt/globalkeyshortcuts.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/lxqt/globalkeyshortcuts.conf
@@ -7,10 +7,10 @@ AllowGrabMiscSpecial=true
 MultipleActionsBehaviour=first
 WindowSize=@Size(750 400)
 
-[Control%2BAlt%2BE.1]
+[Control%2BAlt%2BH.1]
 Comment=Filer
 Enabled=true
-Exec=launch, Filer
+Exec=launch, Filer, ~
 
 [Control%2BAlt%2BI.2]
 Comment=Web browser
@@ -82,7 +82,7 @@ Comment=Record screencast
 Enabled=true
 Exec=screencast
 
-[Control%2BH.14]
+[Control%2BH.16]
 Comment=Hide Window
 Enabled=true
 Exec=sh, -c, xdotool windowminimize $(xdotool getactivewindow)
