Fix screenshot shortcut [ci skip]

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/lxqt/globalkeyshortcuts.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/lxqt/globalkeyshortcuts.conf
@@ -67,7 +67,7 @@ Comment=Force quit application
 Enabled=true
 Exec=xkill
 
-[Shift%2BAlt%2B3.13]
+[Shift%2BControl%2B3.13]
 Comment=Screenshot
 Enabled=true
 Exec=lximage-qt, -s
