Use .app bundles
https://github.com/helloSystem/ISO/issues/112

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/cyberos/dock_pinned.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/cyberos/dock_pinned.conf
@@ -7,21 +7,21 @@ visibleName=Home
 
 [Falkon]
 DesktopPath=
-Exec=falkon
+Exec=Falkon
 IconName=applications-internet
 Index=1
 visibleName=Browser
 
 [FeatherPad]
 DesktopPath=
-Exec=featherpad
+Exec=FeatherPad
 IconName=featherpad
 Index=2
 visibleName=FeatherPad
 
 [qterminal]
 DesktopPath=
-Exec=qterminal
+Exec=QTerminal
 IconName=Terminal
 Index=3
 visibleName=Terminal
