Combine 2 settings files [ci skip]

--- a/overlays/uzip/furybsd-settings/files/usr/local/etc/X11/xorg.conf.d/10-input-touchpad.conf
+++ b/overlays/uzip/furybsd-settings/files/usr/local/etc/X11/xorg.conf.d/10-input-touchpad.conf
@@ -5,4 +5,5 @@ Section "InputClass"
     Driver          "libinput"
     Option          "MiddleEmulation"    "on"
     Option          "DisableWhileTyping" "on"
+    Option          "Tapping"            "on"
 EndSection
