Use frameworks as frameworks

--- a/CoreFoundation/Makefile
+++ b/CoreFoundation/Makefile
@@ -82,6 +82,6 @@ INCS= \
 	CoreFoundation.h
 
 RESOURCES=Info.plist English.lproj
-CFLAGS+= -I.. -I${BUILDROOT}/System/Library/Frameworks/Foundation.framework/Headers/
+CFLAGS+= -I.. -F${BUILDROOT}/System/Library/Frameworks -framework Foundation
 
 .include <he.framework.mk>
