Fix tabs, closes #144 [ci skip]

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/qterminal.org/qterminal.ini
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/qterminal.org/qterminal.ini
@@ -7,7 +7,7 @@ ChangeWindowIcon=true
 ChangeWindowTitle=true
 ConfirmMultilinePaste=false
 FixedTabWidth=true
-FixedTabWidthValue=500
+FixedTabWidthValue=120
 HandleHistory=
 HideTabBarWithOneTab=true
 HistoryLimited=true
@@ -22,7 +22,7 @@ SavePosOnExit=false
 SaveSizeOnExit=false
 ScrollbarPosition=2
 ShowCloseTabButton=true
-TabBarless=true
+TabBarless=false
 TabsPosition=0
 Term=xterm-256color
 TerminalBackgroundImage=
