--- a/CoreFoundation/Makefile
+++ b/CoreFoundation/Makefile
@@ -1,3 +1,5 @@
+.include <internal/framework.common.mk>
+
 FRAMEWORK=CoreFoundation
 SRCS= \
 	CFArray.m \
@@ -82,9 +84,7 @@ INCS= \
 	CoreFoundation.h
 
 RESOURCES=Info.plist English.lproj
-CFLAGS+= -fobjc-runtime=gcc \
-	 -I.. -I../libobjc2 \
-	 -O0 -g \
+CFLAGS+= ${FMWK_CFLAGS} -I.. -I../libobjc2 \
 	 -F${BUILDROOT}/System/Library/Frameworks -framework Foundation
 
 .include <he.framework.mk>
