--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -34,7 +34,7 @@ task:
     - kldload geom_uzip.ko || true
     - pkg install -y pkg git-lite zsync wget sha bash py37-xdg librsvg2 ca_root_nss # qemu-devel uefi-edk2-qemu-x86_64
     - mkdir -p /usr/local/furybsd
-    - mount -t tmpfs tmpfs /usr/local/furybsd
+    # mount -t tmpfs tmpfs /usr/local/furybsd
     
   Build_script:
     - export VER=$(uname -r | cut -d "-" -f 1)
