--- a/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
+++ b/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
@@ -15,6 +15,9 @@ security.bsd.unprivileged_proc_debug=0
 # kern.randompid=1
 kern.evdev.rcpt_mask=6
 
+# Allow non-root users to run truss
+security.bsd.unprivileged_proc_debug=1
+
 # Allow non-root users to mount
 vfs.usermount=1
 
