Allow truss and dmesg for normal users [ci skip]

--- a/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
+++ b/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
@@ -10,8 +10,13 @@
 # Note: to display the correct icons in Dock for processes running as root, users must be able to see information on root processes
 security.bsd.see_other_gids=0
 security.bsd.see_jail_proc=0
-security.bsd.unprivileged_read_msgbuf=0
-security.bsd.unprivileged_proc_debug=0
+
+# Allow dmesg for normal users
+security.bsd.unprivileged_read_msgbuf=1
+
+# Allow truss for normal users
+security.bsd.unprivileged_proc_debug=1
+
 # kern.randompid=1
 kern.evdev.rcpt_mask=6
 
