Remove OHCI since it cannot be loaded in this way [ci skip]

--- a/overlays/boot/boot/loader.conf
+++ b/overlays/boot/boot/loader.conf
@@ -64,7 +64,6 @@ beastie_disable="YES"
 autoboot_delay="3"
 # console="spinconsole" # Affects bootloader messages, makes it impossible to hit Esc in the right moment
 
-# IEEE1394 High-performance Serial Bus and OHCI FireWire chipset device driver
+# IEEE1394 High-performance Serial Bus FireWire chipset device driver
 # Does this allow Macs to be booted via FireWire?
 firewire_load="YES"
-fwohci_load="YES"
