--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,7 +3,7 @@ task:
     cpu: 2
     memory: 8G
     matrix:
-      - image: freebsd-12-1-release-amd64
+      # image: freebsd-12-1-release-amd64 # EOL
       - image: freebsd-12-2-release-amd64
       # image: freebsd-13-0-current-amd64-v20201112 # Disabled, HIDPI broken and iichid trackpad broken on Acer
 
