--- a/overlays/boot/boot/loader.conf
+++ b/overlays/boot/boot/loader.conf
@@ -1,3 +1,13 @@
+# Load modules needed for unionfs
+nullfs_load="YES"
+unionfs_load="YES"
+
+# Load modules needed for FUSE (may not be needed here)
+fuse_load="YES"
+
+# Load ramdisk image
+mfsroot_load="YES"
+
 # Load modules needed for compressed uzip
 geom_uzip_load="YES"
 
@@ -16,7 +26,7 @@ vfs.root.mountfrom="ufs:/dev/md0"
 init_path="/rescue/init"
 init_shell="/rescue/sh"
 init_script="/init.sh"
-init_chroot="/"
+init_chroot="/sysroot"
 
 kern.geom.label.disk_ident.enable=0
 kern.geom.label.gptid.enable=0
