Build hello again

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,8 +21,8 @@ task:
 
   env:
     matrix:
-      # DESKTOP: 'hello'
-      DESKTOP: 'fluxbox'
+      DESKTOP: 'hello'
+      # DESKTOP: 'fluxbox'
 
   env:
     matrix:
