Use launch command for QTerminal [ci skip]
This allows us to use an app bundle

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/lxqt/globalkeyshortcuts.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/lxqt/globalkeyshortcuts.conf
@@ -25,7 +25,7 @@ Exec=xdg-screensaver, lock
 [Control%2BAlt%2BT.4]
 Comment=QTerminal
 Enabled=true
-Exec=qterminal
+Exec=launch, QTerminal
 
 [Print.5]
 Comment=Screenshot
