--- a/CoreText/Makefile
+++ b/CoreText/Makefile
@@ -3,7 +3,7 @@
 FRAMEWORK=CoreText
 SRCS= CTFont.m KTFont.m
 INCS= CoreText.h CoreTextExport.h CTFont.h KTFont.h
-RESOURCES=Info.plist English.lproj
+RESOURCES=Info.plist 
 CFLAGS+= ${FMWK_CFLAGS} -I.. -I../libobjc2 -I../Foundation/Headers
 
 .include <he.framework.mk>
