--- a/overlays/uzip/hello/files/usr/local/share/file-manager/actions/open-as-root.desktop
+++ b/overlays/uzip/hello/files/usr/local/share/file-manager/actions/open-as-root.desktop
@@ -3,7 +3,7 @@ Type=Action
 Name=Open as Root
 Name[de]=Als Root öffnen
 Icon=dialog-password
-Profiles=profile-zero;profile-one;
+Profiles=profile-zero;profile-one;profile-two;
 
 [X-Action-Profile profile-zero]
 MimeTypes=;text/*;application/x-shellscript
@@ -12,3 +12,7 @@ Exec=sudo -E -A launch FeatherPad %f
 [X-Action-Profile profile-one]
 MimeTypes=inode/directory;
 Exec=sudo -A launch Filer %f
+
+[X-Action-Profile profile-two]
+MimeTypes=inode/mount-point;
+Exec=sudo -A launch Filer /media/%w
