Try building 13 again

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,7 +5,7 @@ task:
     matrix:
       # image: freebsd-12-1-release-amd64 # EOL
       - image: freebsd-12-2-release-amd64
-      # image: freebsd-13-0-current-amd64-v20201112 # Image too large; HIDPI broken and iichid trackpad broken on Acer
+      - image: freebsd-13-0-current-amd64-v20201112 # HIDPI broken and iichid trackpad broken on Acer
 
   env:
     CIRRUS_CLONE_DEPTH: 1
