Enable Spatial Mode

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/filer-qt/default/settings.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/filer-qt/default/settings.conf
@@ -7,6 +7,8 @@ NoUsbTrash=false
 QuickExec=true
 SingleClick=false
 UseTrash=true
+DirInfoWrite=false
+SpatialMode=true
 
 [Desktop]
 BgColor=#4e7fb4
