Fix "FATAL: kernel too old" when running Linux binaries [ci skip]

--- a/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
+++ b/overlays/uzip/furybsd-settings/files/etc/sysctl.conf
@@ -34,3 +34,6 @@ hw.snd.default_auto=2
 hw.acpi.lid_switch_state="S3"
 
 kern.coredump=0
+
+# Fix "FATAL: kernel too old" when running Linux binaries
+compat.linux.osrelease="5.0.0"
