Use 'launch' command to launch QTerminal [ci skip]

--- a/overlays/uzip/hello/files/usr/share/skel/dot.config/filer-qt/default/settings.conf
+++ b/overlays/uzip/hello/files/usr/share/skel/dot.config/filer-qt/default/settings.conf
@@ -45,7 +45,7 @@ OnlyUserTemplates=false
 SIUnit=false
 SuCommand=gksu %s
 TemplateRunApp=false
-Terminal=qterminal -e %s
+Terminal=launch QTerminal -e %s
 
 [Thumbnail]
 MaxThumbnailFileSize=4096
