Helper to install some extra packages

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@ dist
 *.pico
 *.o
 .depend-*
+*.framework
+*.so
+*.so.debug
+*.so.full
+*.lo
+*.la
+config.log
+config.status
+.libs
+.deps
+AppKit/CGEvent.h
+AppKit/KTFont.h
+AppKit/NSRaise.h
+Foundation/Headers
+AppKit/Headers
+																 
