Creatively abuse ports to build X11/GUI system in base

--- a/Onyx2D/Makefile
+++ b/Onyx2D/Makefile
@@ -192,7 +192,7 @@ INCS= \
 	gif_lib.h
 
 RESOURCES=Info.plist English.lproj
-CFLAGS+= ${FMWK_CFLAGS} -I/usr/local/include -I/usr/local/include/freetype2 -I.. -I../libobjc2 -I../Foundation/Headers
-LDFLAGS+= ${FMWK_LDFLAGS} -L/usr/local/lib -ljpeg -lpng -ltiff
+CFLAGS+= ${FMWK_CFLAGS} -I/usr/include/freetype2 -I.. -I../libobjc2 -I../Foundation/Headers
+LDFLAGS+= ${FMWK_LDFLAGS} -ljpeg -lpng -ltiff
 
 .include <he.framework.mk>
